--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,43 @@
 header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	background-color: #333;
+	padding: 10px 450px 10px 20px;
 	color: white;
-	padding: 1rem;
+	height: 80px;
+	/* margin: 500px; */
 }
 
-nav ul {
-	list-style: none;
+.logo {
+	margin-right: auto;
+	position: relative;
+	top: -50px;
+	left: -30px;
+}
+
+.search-bar {
 	display: flex;
-	gap: 1rem;
+	justify-content: center;
+	flex-grow: 1;
+	margin-left: -20px;
+	padding-left: 30px;
+}
+
+.search-bar input {
+	width: 100%;
+	max-width: 300px;
+	padding: 5px;
+	border-radius: 5px;
+	border: none;
+	margin-left: -50px;
+	height: 25px;
+}
+
+nav {
+	display: flex;
+	gap: 20px;
+	padding-left: 30px;
 }
 
 nav a {
