--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,10 +3,9 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	background-color: #333;
-	padding: 10px 450px 10px 20px;
+	padding: 10px 550px 10px 10px;
 	color: white;
 	height: 80px;
-	/* margin: 500px; */
 }
 
 .logo {
@@ -37,7 +36,8 @@ header {
 nav {
 	display: flex;
 	gap: 20px;
-	padding-left: 30px;
+	padding-left: 130px;
+	margin-left: 0;
 }
 
 nav a {
