--- a/src/components/BaseLayout/BaseLayout.css
+++ b/src/components/BaseLayout/BaseLayout.css
@@ -1,17 +1,27 @@
 .base-layout {
 	background-color: #f0f0f0;
+	max-width: 1200px;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	font-family: Arial, sans-serif;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	width: 100vh;
 }
 
 .main-content {
+	width: 100vw;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	overflow-x: hidden;
+	background-color: #f0f0f0; 
+	/* min-height: calc(100vh - 160px); */
 	flex: 1;
-	padding: 20px;
+	left: 0;
+	/* background-color: red; */
 }
 
 header {
@@ -43,4 +53,7 @@ body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
+	height: 100%;
+	/* left: 0; */
+	/* overflow-x: hidden;
 }
