adding signup form

--- a/src/components/BaseLayout/BaseLayout.css
+++ b/src/components/BaseLayout/BaseLayout.css
@@ -1,5 +1,4 @@
 .base-layout {
-	background-color: #f0f0f0;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -10,8 +9,10 @@
 }
 
 .main-content {
-	flex: 1;
-	padding: 20px;
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 50px;
 }
 
 header {
