--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,23 +3,19 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	background-color: #333;
-	padding: 10px 50px 10px 10px;
+	padding: 10px 20px;
 	color: white;
 	height: 80px;
 }
 
 .logo {
-	margin-right: auto;
-	position: relative;
-	top: -57px;
-	left: -20px;
+	margin-left: 20px;
 }
 
 .search-bar {
 	display: flex;
 	justify-content: center;
 	flex-grow: 1;
-	margin-left: -20px;
 }
 
 .search-bar input {
@@ -31,10 +27,64 @@ header {
 	height: 25px;
 }
 
-nav {
+.navbar {
 	display: flex;
 	gap: 20px;
-	padding: 10px 70px 10px 10px;
+	margin-left: auto;
+}
+nav a {
+	color: white;
+	text-decoration: none;
+	font-size: 16px;
+}
+
+nav a:hover {
+	text-decoration: underline;
+}
+
+/* ========== */
+
+/* header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #333;
+	padding: 10px;
+	margin-right: 29px;
+	color: white;
+	height: 80px;
+}
+
+.logo {
+	margin-right: auto;
+	position: relative;
+	top: 1px;
+	left: 20px;
+}
+
+.search-bar {
+	display: flex;
+	justify-content: center;
+	flex-grow: 1;
+	margin-left: 10px;
+}
+
+.search-bar input {
+	width: 100%;
+	max-width: 300px;
+	padding: 5px;
+	border-radius: 5px;
+	border: none;
+	height: 25px;
+	margin-left: 20px;
+}
+
+.navbar {
+	display: flex;
+	gap: 25px;
+	margin-left: 520px;
+
+	margin-right: 0;
 }
 
 nav a {
@@ -44,4 +94,4 @@ nav a {
 
 nav a:hover {
 	text-decoration: underline;
-}
+} */
