--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,19 +1,67 @@
 .navbar {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
-	padding: 10px 540px 10px 0;
+	justify-content: flex-end;
+	padding: 10px 20px;
 	background-color: #282c34;
 	color: white;
+	margin-right: 30px;
+	padding-right: 20px;
+	float: right;
 }
 
-.navbar-left .logo {
+.nav-left .logo {
 	height: 40px;
 }
 
-.navbar-center {
+.nav-center {
 	flex: 1;
-	text-align: left;
+	text-align: center;
+}
+
+nav ul {
+	display: flex;
+	gap: 20px;
+	list-style: none;
+	margin: 120px;
+	padding: 0;
+}
+
+nav li {
+	display: inline;
+}
+
+.nav-right {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+
+.nav-links {
+	display: flex;
+	gap: 20px;
+	margin: 0;
+	padding: 0;
+}
+
+.nav-link {
+	text-decoration: none;
+	color: white;
+	padding: 5px 10px;
+	border-radius: 5px;
+	transition:
+		background-color 0.3s ease,
+		transform 0.2s ease;
+}
+
+.nav-link:hover {
+	background-color: #444;
+	text-decoration: underline;
+	transform: scale(1.05);
+}
+
+.nav-link.active {
+	font-weight: bold;
 }
 
 .search-bar {
@@ -23,33 +71,5 @@
 	border-radius: 5px;
 	border: 1px solid #ccc;
 	font-size: 16px;
+	outline: none;
 }
-
-.navbar-right {
-	display: flex;
-	align-items: center;
-	gap: 15px;
-}
-
-.nav-links {
-	display: flex;
-	gap: 10px;
-}
-
-.nav-link {
-	text-decoration: none;
-	color: white;
-	padding: 5px 10px;
-	border-radius: 5px;
-	transition: background-color 0.3s ease;
-}
-
-.nav-link:hover {
-	background-color: #444;
-}
-
-/* .welcome {
-	margin-right: 10px;
-	color: #ccc;
-	font-size: 14px;
-} */
